update with feedback

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -21,9 +21,10 @@ For more information about how Windows cells work in PCF, see the <a href="under
 
 ## <a id='install'></a>Installing Windows Cells ##
 
-* <a href="./deploy-windows.html" class="subnav">Deploying the BOSH Release for Windows</a>
-
 * <a href="./build-stemcell.html" class="subnav">Building a Windows Stemcell</a>
+	<p class="note"><strong>Note</strong>: The procedures in Building a Windows Stemcell are only required for vSphere deployments. If you are using Amazon Web Services (AWS), skip this topic and proceed directly to <a href="deploy-windows">Deploying the BOSH Release for Windows</a>.</p>
+</p>
+* <a href="./deploy-windows.html" class="subnav">Deploying the BOSH Release for Windows</a>
 
 ## <a id="managing"></a>Managing Windows Cells
 
