fixes unintended italics

--- a/docs-content/build-stemcell.html.md.erb
+++ b/docs-content/build-stemcell.html.md.erb
@@ -83,7 +83,7 @@ Perform the following steps to prepare and populate a Minio blobstore:
     <pre class="terminal">$ mv PSWindowsUpdate.zip PSWindowsUpdate_v1.zip</pre>
 1. Copy the the VMWare OVF Tool `.bundle` file and the PSWindowsUpdate PowerShell module `.zip` file into your Minio bucket:
     <pre class="terminal">
-    $ mc cp ~/Downloads/VMware-ovftool-4.1.0-2459827-lin.x86_64.bundle myminio/bosh-windows-bucket
+    $ mc cp ~/Downloads/VMware-ovftool-4.1.0-2459827-lin.x86\_64.bundle myminio/bosh-windows-bucket
     $ mc cp ~/Downloads/PSWindowsUpdate_v1.zip myminio/bosh-windows-bucket
     </pre>
 
