--- a/docs-content/windows-troubleshooting.html.md.erb
+++ b/docs-content/windows-troubleshooting.html.md.erb
@@ -27,7 +27,7 @@ To perform the troubleshooting procedures in this topic, you must first log in t
 
 Perform the following steps to retrieve the logs for the Windows cell:
 
-1. Download the logs, replacing YOUR-LOGS-DIR with your destination directory:
+1. Download the logs, replacing `YOUR-LOGS-DIR` with your destination directory:
 	<pre class="terminal">
 	$ bosh logs cell_windows 0 --dir YOUR-LOGS-DIR
 	</pre>
