--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -7,6 +7,8 @@ owner: Greenhouse
 
 This topic describes how to deploy the BOSH Release for Windows to install Windows cells on your Pivotal Cloud Foundry (PCF) deployment.
 
+<p class="note"><strong>Note</strong>: The BOSH Release for Windows is currently in beta.</p>
+
 ## <a id='reqs'></a> Requirements
 
 You must have the following to deploy the BOSH Release for Windows:
