--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -5,7 +5,7 @@ owner: Diego
 
 <strong><%= modified_date %></strong>
 
-This documentation describes how operators install and manage Windows [cells](http://docs.pivotal.io/concepts/architecture/index.html#diego-cell) in Pivotal Cloud Foundry (PCF), and how developers push .NET apps to Windows cells. 
+This documentation describes how operators install and manage Windows [cells](../concepts/architecture/index.html#diego-cell) in Pivotal Cloud Foundry (PCF), and how developers push .NET apps to Windows cells. 
 
 <p class="note"><strong>Note</strong>: You must have PCF 1.8 or later deployed on Amazon Web Services (AWS) or vSphere to install Windows cells.</p>
 
