--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -7,9 +7,7 @@ owner: Greenhouse
 
 This topic describes how to push .NET apps to Windows cells. 
 
-After operators have deployed the BOSH Release for Windows to install a Windows cell on their Pivotal Cloud Foundry (PCF) deployment, developers can push .NET apps to the Windows cell. Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted). 
-
-For information on how operators install and manage Windows cells, see the [Installing and Managing Windows Cells](../opsguide/windows.html) topic.
+After operators have [deployed](deploy-windows.html) the BOSH Release for Windows to install a Windows cell on their Pivotal Cloud Foundry (PCF) deployment, developers can push .NET apps to the Windows cell. Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted). 
 
 ##<a id='push'></a> Push a .NET App
 
