--- a/docs-content/windows-rotate-creds.html.md.erb
+++ b/docs-content/windows-rotate-creds.html.md.erb
@@ -11,7 +11,7 @@ When operators rotate credentials for a Pivotal Cloud Foundry (PCF) deployment, 
 
 Perform the following steps to rotate your Garden Windows credentials:
 
-1. Follow the steps in the [Log into BOSH](http://docs.pivotal.io/pivotalcf/customizing/trouble-advanced.html#log-in) section of the Advanced Troubleshooting with the BOSH CLI topic to target and log in to your BOSH Director. The steps vary slightly depending on whether your PCF deployment uses internal authentication or an external user store.
+1. Follow the steps in the [Log into BOSH](../customizing/trouble-advanced.html#log-in) section of the Advanced Troubleshooting with the BOSH CLI topic to target and log in to your BOSH Director. The steps vary slightly depending on whether your PCF deployment uses internal authentication or an external user store.
 
 1. Download the manifest of your PCF deployment: 
     <pre class="terminal">
