--- a/docs-content/windows-troubleshooting.html.md.erb
+++ b/docs-content/windows-troubleshooting.html.md.erb
@@ -9,7 +9,7 @@ This topic describes how to troubleshoot Windows cells on a Pivotal Cloud Foundr
 
 To perform the troubleshooting procedures in this topic, you must first log in to BOSH and set your current deployment to Garden Windows by performing the following steps: 
 
-1. Follow the steps in the [Log into BOSH](http://docs.pivotal.io/pivotalcf/customizing/trouble-advanced.html#log-in) section of the Advanced Troubleshooting with the BOSH CLI topic to target and log in to your BOSH Director. The steps vary slightly depending on whether your PCF deployment uses internal authentication or an external user store.
+1. Follow the steps in the [Log into BOSH](../customizing/trouble-advanced.html#log-in) section of the Advanced Troubleshooting with the BOSH CLI topic to target and log in to your BOSH Director. The steps vary slightly depending on whether your PCF deployment uses internal authentication or an external user store.
 
 1. If necessary, download the manifest of your Garden Windows deployment: 
     <pre class="terminal">
