--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -13,8 +13,9 @@ This topic describes how to deploy the BOSH Release for Windows to install Windo
 
 You must have the following to deploy the BOSH Release for Windows:
 
-* PCF 1.8 or later deployed to Amazon Web Services (AWS) or vSphere
+* PCF 1.8 or later deployed to vSphere or Amazon Web Services (AWS)
 * If your PCF deployment runs on vSphere, you must build your own stemcell by following the steps in the [Building a Windows Stemcell](build-stemcell.html) topic before performing the procedures below
+* If your PCF deployment runs on AWS, you can use the stemcell included in the BOSH Release for Windows, but your deployment must be in `us-east-1` or `us-west-2`
 
 <p class="note"><strong>Note</strong>: Once your Windows cell is running, you must disable FIPS as a Group Policy setting. Otherwise, Garden Windows doesn't work.</p>
 
@@ -59,6 +60,8 @@ You must have the following to deploy the BOSH Release for Windows:
     <pre class="terminal">
     $ bosh upload stemcell YOUR-WINDOWS-STEMCELL.tgz
     </pre>
+
+    <p class="note"><strong>Note</strong>: If you are using AWS, your deployment must be in <code>us-east-1</code> or <code>us-west-2</code> to upload the stemcell to BOSH successfully.</p>
 
 5. Download the manifest of your PCF deployment: 
     <pre class="terminal">
