new windows security topic[#133621635]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -17,7 +17,11 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 
 <%= image_tag('windows-overview.png') %>
 
-For more information about how Windows cells work in PCF, see the <a href="understand-windows.html" class="subnav">Understanding Windows Cells</a> topic.
+## <a id='understand'></a>Understanding BOSH Windows ##
+
+* <a href="understand-windows.html" class="subnav">Understanding Windows Cells</a>
+
+* <a href="windows-security.html" class="subnav">Understanding Stemcell Security</a>
 
 ## <a id='install'></a>Installing Windows Cells ##
 
