--- a/docs-content/understand-windows.html.md.erb
+++ b/docs-content/understand-windows.html.md.erb
@@ -5,7 +5,7 @@ owner: Greenhouse
 
 <strong><%= modified_date %></strong>
 
-This topic provides a description of how Windows cells work in Pivotal Cloud Foundry (PCF). For more information about security, see the [Understanding Stemcell Security](windows-security.html) topic.
+This topic provides a description of how Windows cells work in Pivotal Cloud Foundry (PCF). 
 
 ##<a id='overview'></a> Overview
 
