--- a/docs-content/windows-troubleshooting.html.md.erb
+++ b/docs-content/windows-troubleshooting.html.md.erb
@@ -77,7 +77,7 @@ Perform the following steps to connect to your Windows cell to run diagnostics:
 	<%= image_tag('rdp-connect.png') %>
 	* **Connection name**: Enter a name for this connection.
 	* **PC name**: Enter the IP address of your Windows cell.
-	* **User name**: Enter `Adminstrator`.
+	* **User name**: Enter `Administrator`.
 	* **Password**: Enter the password of your Windows cell that you obtained above.
 
 1. To mount a directory on your local machine as a drive in the Windows cell, perform the following steps:
