--- a/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
@@ -5,7 +5,7 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/windows/index.html">Using Windows Cells</a>
+        <a id='home-nav-link' href="/windows/index.html">Using Windows Cells (BETA)</a>
       </li>
 
       <li>
