--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -73,7 +73,7 @@ Perform the following steps to deploy a SOAP web service:
 	* You specify the buildpack as `binary_buildpack` to expedite the staging process, because the binary buildpack is lightweight. Garden Windows does not use the binary buildpack to stage your app. 
 	<br><br>
 	The push command can include the following optional flags:
-	* If you are not push your service from the directory containing the published web service, add the `-p` flag to your `cf push` command and specify the path to the directory that contains the published web service. 
+	* If you are not pushing your service from the directory containing the published web service, add the `-p` flag to your `cf push` command and specify the path to the directory that contains the published web service. 
 	* If you do not have a route serving `/`, add the `-u none` flag to disable the health check.
 	<br><br>
 
