remove duplicated word

--- a/docs-content/build-stemcell.html.md.erb
+++ b/docs-content/build-stemcell.html.md.erb
@@ -79,7 +79,7 @@ Perform the following steps to prepare and populate a Minio blobstore:
     * The Windows Server 2012 R2 ISO from [Microsoft](https://msdn.microsoft.com/en-us/windowsserver2012r2.aspx)
 1. Rename the PSWindowsUpdate PowerShell module from `PSWindowsUpdate.zip` to `PSWindowsUpdate_v1.zip`:
     <pre class="terminal">$ mv PSWindowsUpdate.zip PSWindowsUpdate_v1.zip</pre>
-1. Copy the the VMWare OVF Tool `.bundle` file and the PSWindowsUpdate PowerShell module `.zip` file into your Minio bucket:
+1. Copy the VMWare OVF Tool `.bundle` file and the PSWindowsUpdate PowerShell module `.zip` file into your Minio bucket:
     <pre class="terminal">
     $ mc cp ~/Downloads/VMware-ovftool-4.1.0-2459827-lin.x86\_64.bundle myminio/bosh-windows-bucket
     $ mc cp ~/Downloads/PSWindowsUpdate_v1.zip myminio/bosh-windows-bucket
