--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -1,92 +1,37 @@
 ---
-title: Deploying BOSH Release for Windows 
+title: Deploying PCF Runtime for Windows 
 owner: Greenhouse
 ---
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to deploy the BOSH Release for Windows to install Windows cells on your Pivotal Cloud Foundry (PCF) deployment.
-
-<p class="note"><strong>Note</strong>: The BOSH Release for Windows is currently in beta.</p>
+This topic describes how to install and configure the Pivotal Cloud Foundry Runtime for Windows tile.
 
 ## <a id='reqs'></a> Requirements
 
-To deploy the BOSH Release for Windows, you must have PCF 1.8 or later deployed to vSphere or Amazon Web Services (AWS).
+To deploy the BOSH Release for Windows, you must have PCF 1.9.2 or later deployed to vSphere, Amazon Web Services (AWS) and Azure.
 
-* If your PCF deployment runs on vSphere, you must build your own stemcell by following the steps in the [Building a Windows Stemcell](build-stemcell.html) topic before performing the procedures below.
-* If your PCF deployment runs on AWS, you can use the stemcell included in the BOSH Release for Windows, but your deployment must be in `us-east-1`, `us-west-2`, or `eu-west-1`.
+##<a id='install'></a> Step 1: Install the Tile
 
-<p class="note"><strong>Note</strong>: Once your Windows cell is running, you must disable FIPS as a Group Policy setting. If you fail to disable FIPS as a Group Policy setting, Garden Windows will not work.</p>
+1. Download the product file from the **Pivotal Cloud Foundry Runtime for Windows** section of [Pivotal Network](https://network.pivotal.io/products/runtime-for-windows).
 
-## <a id="prepare"></a> Step 1: Prepare to Deploy
+1. Navigate to the Ops Manager Installation Dashboard and click **Import a Product** to upload the product file. 
 
-1. Ensure that you created a service network during your Ops Manager installation. A service network specifies a CIDR range within which Ops Manager does not provision VMs. You create a service network by selecting a checkbox in the **Create Networks** section of Ops Manager. See your IaaS-specific topic for configuring Ops Manager from the [Installing Pivotal Cloud Foundry](../installing/index.html) topic for more information.
+1. Click **+** under the uploaded **PCF Windows Runtime** tile to add it to your staging area.
 
-1. Download all of the BOSH Release for Windows files from [Pivotal Network](http://network.pivotal.io) to a single directory. 
+##<a id='config'></a> Step 2: Configure and Deploy the Tile
 
-1. Prepare to SCP onto your Ops Manager VM.
-    * For AWS, perform the following steps:
-        1. In the EC2 instances page of your AWS Console, locate the FQDN of the Ops Manager VM.
-        1. Locate the `ops_mgr.pem` private key file you used when installing Ops Manager, and ensure that you have added it to your list of private keys with the following terminal command:
-	<pre class="terminal">
-	$ ssh-add ops_mgr.pem
-	</pre>
-    * For vSphere, perform the following steps:
-        1. In vCenter, locate the FQDN of the Ops Manager VM.
-        1. Locate the credentials you used to import the PCF `.ova` or `.ovf` file into your virtualization system.
+1. Click the newly added **PCF Windows Runtime** tile.
 
-## <a id="deploy"></a> Step 2: Deploy BOSH Release for Windows
+    <%= image_tag('windows-tile.png') %>
 
-1. In a terminal window, navigate to the directory where you downloaded the BOSH Release for Windows files. For example, if you downloaded the files to the **~/bosh-windows** directory, run the following command:
-    <pre class="terminal">
-    $ cd ~/bosh-windows
-    </pre>
+1. Click **Stemcell**. Record the stemcell version number required by the tile. 
 
-2.  Securely copy `garden-windows-0.x.tgz`, `generate_manifest.rb`, and your stemcell file to your Ops Manager VM as `ubuntu@OPS-MANAGER-FQDN`. 
-    <p class="note"><strong>Note</strong>: For AWS, use the stemcell included in the BOSH Release for Windows. For vSphere, use the stemcell you built in the <a href="build-stemcell.html">Building a Windows Stemcell</a> topic.</p> 
+1. Retrieve the stemcell by following the steps below for your IaaS.
+    * For vSphere, you must build your own stemcell. See the [Building a Windows Stemcell](build-stemcell.html) topic for more information..
+    * For AWS and Azure, navigate to the **PCF Stemcells for Windows** section of [Pivotal Network](https://network.pivotal.io).
 
-    The following example securely copies an AWS stemcell:
-    <pre class="terminal">
-    $ scp garden-windows-0.0.6.tgz generate\_manifest.rb 
-    light-bosh-stemcell-0.0.46-aws-xen-hvm-windows2012R2-go\_agent.tgz 
-    ubuntu<span>@</span>pcf.example.com:~
-    </pre>
-    
-    For vSphere, enter the password that you set during the `.ova` deployment into vCenter when prompted. 
+1. Click **Save**
 
-3. Follow the steps in the [Log into BOSH](../customizing/trouble-advanced.html#log-in) section of the _Advanced Troubleshooting with the BOSH CLI_ topic to target and log in to the BOSH Director. The steps vary slightly depending on whether your PCF deployment uses internal authentication or an external user store.
-
-4. After you successfully log in to the BOSH Director, use the `bosh upload stemcell YOUR-WINDOWS-STEMCELL.tgz` command to upload the Windows stemcell to BOSH. Replace `YOUR-WINDOWS-STEMCELL.tgz` with the name of your Windows stemcell.
-
-    <pre class="terminal">
-    $ bosh upload stemcell YOUR-WINDOWS-STEMCELL.tgz
-    </pre>
-
-    <p class="note"><strong>Note</strong>: For AWS, your deployment must be in <code>us-east-1</code>, <code>us-west-2</code>, or <code>eu-west-1</code> to upload the stemcell to BOSH successfully.</p>
-
-5. Use the `bosh download manifest YOUR-PCF-DEPLOYMENT YOUR-PCF-MANIFEST.yml` command to download the manifest of your PCF deployment. Replace `YOUR-PCF-DEPLOYMENT` with the name of your PCF deployment, and `YOUR-PCF-MANIFEST.yml` with a manifest name to use to later steps.
-
-    <pre class="terminal">
-    $ bosh download manifest YOUR-PCF-DEPLOYMENT YOUR-PCF-MANIFEST.yml
-    </pre>
-    <p class="note"><strong>Note</strong>: You must know the name of your PCF deployment to download the manifest. To retrieve it, run <code>bosh deployments</code> to list your deployments and locate the name of your PCF deployment.</p>
-
-6. Use the manifest generation script included in the BOSH Release for Windows to generate a manifest for your deployment. You must specify either 
-`vsphere` or `aws` depending on your IaaS. The following example uses AWS:
-
-    <pre class="terminal">
-    $ ./generate-manifest YOUR-PCF-MANIFEST.yml aws > garden-windows.yml
-   </pre>
-
-1. In a text editor, modify the generated manifest to replace the network name with the name of your [service network](#prepare).
-
-7. Upload the Garden Windows release to BOSH:
-    <pre class="terminal">
-    $ bosh upload release garden-windows-y-x.tgz 
-    </pre>
-
-8. Deploy Garden Windows:
-    <pre class="terminal">
-    $ bosh -d garden-windows.yml deploy
-    </pre>
+1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the Pivotal Cloud Foundry Runtime for Windows tile.
 
