deploy windows tile topic for 1-9[#138522657]

--- a/docs-book/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/windows_subnav.erb
@@ -13,7 +13,7 @@
       </li>
 
       <li>
-        <a href="/windows/deploy-windows.html">Deploying the BOSH Release for Windows</a>
+        <a href="/windows/deploy-windows.html">Deploying PCF Runtime for Windows</a>
       </li>
 
       <li>
