--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -5,13 +5,22 @@ owner: Greenhouse
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to install and configure the Pivotal Cloud Foundry Runtime for Windows tile.
+This topic describes how to install and configure the Pivotal Cloud Foundry (PCF) Runtime for Windows tile. The PCF Runtime for Windows tile installs Windows cells on your PCF deployment.
 
 ## <a id='reqs'></a> Requirements
 
-To deploy the BOSH Release for Windows, you must have PCF 1.9.2 or later deployed to vSphere, Amazon Web Services (AWS) and Azure.
+To install the PCF Runtime for Windows tile, you must have Ops Manager 1.9.2 or later and Elastic Runtime 1.9.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
 
-##<a id='install'></a> Step 1: Install the Tile
+<p class="note"><strong>Note</strong>: Windows stemcells for GCP and Azure are not yet available on Pivotal Network, but are coming soon.</p>
+
+## <a id='ert'></a> Step 1: Confirm Elastic Runtime Settings
+
+There are two settings in the Elastic Runtime tile that affect the Windows cells installed by the PCF Runtime for Windows tile. Configure these settings as desired:
+
+* In the **Networking** section, if you select the **Disable SSL certificate verification for this environment** checkbox, SSL certificate verification is disabled for Windows cells.
+* In the **System Logging** section, if you configure an external syslog aggregator, logs are drained from Windows cells as well as non-Windows cells.
+
+##<a id='install'></a> Step 2: Install the Tile
 
 1. Download the product file from the **Pivotal Cloud Foundry Runtime for Windows** section of [Pivotal Network](https://network.pivotal.io/products/runtime-for-windows).
 
@@ -23,15 +32,25 @@ To deploy the BOSH Release for Windows, you must have PCF 1.9.2 or later deploye
 
 1. Click the newly added **PCF Windows Runtime** tile.
 
-    <%= image_tag('windows-tile.png') %>
+    <%= image_tag('pcf-windows-tile-orange.png') %>
+
+1. Click **Resource Config** and adjust the number and VM types of your Windows cells as needed.
+
+1. Click **Save**.
 
 1. Click **Stemcell**. Record the stemcell version number required by the tile. 
 
+	<%= image_tag('pcf-windows-tile-stemcell.png') %>
+
 1. Retrieve the stemcell by following the steps below for your IaaS.
-    * For vSphere, you must build your own stemcell. See the [Building a Windows Stemcell](build-stemcell.html) topic for more information..
-    * For AWS and Azure, navigate to the **PCF Stemcells for Windows** section of [Pivotal Network](https://network.pivotal.io).
+    * For vSphere, you must build your own stemcell. See the [Building a Windows Stemcell](build-stemcell.html) topic for more information.
+    * For AWS, navigate to the **Stemcells for PCF (Windows Server)** section of [Pivotal Network](https://network.pivotal.io/products/stemcells-windows-server).
+    * For GCP and Azure, stemcells will be available soon on Pivotal Network.
 
-1. Click **Save**
+1. Click **Save**.
 
-1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the Pivotal Cloud Foundry Runtime for Windows tile.
+1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PCF Runtime for Windows tile.
+
+After you have deployed the PCF Runtime for Windows tile, developers can then push .NET applications to Windows cells. For more information, see the [Deploying .NET Apps to Windows Cells](push-windows-apps.html) topic.
+
 
