deploy windows tile topic for 1-10[#138522657]

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -5,11 +5,11 @@ owner: Greenhouse
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to install and configure the Pivotal Cloud Foundry (PCF) Runtime for Windows tile. The PCF Runtime for Windows tile installs Windows cells on your PCF deployment.
+This topic describes how to install and configure the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.10 tile. The PCF Runtime for Windows tile installs Windows cells on your PCF deployment.
 
 ## <a id='reqs'></a> Requirements
 
-To install the PCF Runtime for Windows tile, you must have Ops Manager 1.9.2 or later and Elastic Runtime 1.9.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
+To install the PCF Runtime for Windows v1.10 tile, you must have Ops Manager 1.10.0 or later and Elastic Runtime 1.10.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
 
 <p class="note"><strong>Note</strong>: Windows stemcells for GCP and Azure are not yet available on Pivotal Network, but are coming soon.</p>
 
