--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -30,6 +30,8 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 </p>
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
 
+* <a href="/windows/msi-crossgrade.html">Migrating from Diego Windows</a>
+
 ## <a id="managing"></a>Managing Windows Cells
 
 * <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
