--- a/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
@@ -17,6 +17,10 @@
       </li>
 
       <li>
+        <a href="/windows/msi-crossgrade.html">Migrating from Diego Windows</a>
+      </li>
+
+      <li>
         <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
       </li>
 
