--- a/docs-book/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/windows_subnav.erb
@@ -1,11 +1,11 @@
 <div id="sub-nav" class="js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
-    Using Windows Cells (BETA)
+    Using PCF Runtime for Windows
   </a>
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/windows/index.html">Using Windows Cells (BETA)</a>
+        <a id='home-nav-link' href="/windows/index.html">Using PCF Runtime for Windows</a>
       </li>
 
       <li>
