update msi crossgrade topic[#138740159]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -29,6 +29,7 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 	<p class="note"><strong>Note</strong>: The procedures in Building a Windows Stemcell are only required for vSphere deployments. If you are using Amazon Web Services (AWS), skip this topic and proceed directly to <a href="deploy-windows.html">Deploying the BOSH Release for Windows</a>.</p>
 </p>
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
+* <a href="./msi-crossgrade.html" class="subnav">Migrating from Diego Windows</a>
 
 ## <a id="managing"></a>Managing Windows Cells
 
